# Neural_Network

./: CMakeLists.txt  compile_commands.json  dataset.cpp  dataset.hpp  input.txt  main.cpp  neuralnetwork.cpp  neuralnetwork.hpp  param.txt
